# sir-evt

./: .gitignore  LICENSE  Makefile  README.md  final_report.tex  pyproject.toml
.github/workflows/: docs.yml  lint-and-test.yml
data/: cdc_flu_data.csv
docs/source/: conf.py  index.rst
src/flu_peak/: __init__.py  cli.py  data.py  eval.py  plot.py  preprocess.py
src/flu_peak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/flu_peak/models/: __init__.py  gev.py  sir.py  sir_cli.py
src/flu_peak_evt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing/: README.md  presentation.tex  requirements.txt  run_analysis.py
testing/data/: download_cdc_data.py  help.py  synthetic_flu_data.csv
testing/models/: __init__.py  gev_model.py  gpd_model.py  sir_model.py
testing/preprocessing/: __init__.py  data_prep.py
testing/visualization/: __init__.py  plots.py
tests/: test_coverage.py  test_data.py  test_eval.py  test_gev.py  test_preprocess.py  test_sir.py
